<resources>

    <string name="remote" translatable="false">Satellite_Finder</string>
    <string name="app_name">Satellite Tracker App</string>
    <string name="north">North</string>
    <string name="northwest">N/W</string>
    <string name="west">West</string>
    <string name="southwest">S/W</string>
    <string name="south">South</string>
    <string name="southeast">S/E</string>
    <string name="east">East</string>
    <string name="north_east">N/E</string>
    <string name="not_now"><u>NOT NOW</u></string>
    <string name="select_satellite">Select Satellite</string>
    <string name="satellite_finder">Satellite Finder</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="compass">Compass</string>
    <string name="more">More</string>
    <string name="satellite_info">Satellite info</string>
    <string name="select_map_type">Select Map Type</string>
    <string name="hybrid">Hybrid</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="do_you_like_our_app">Do you like our app?</string>
    <string name="give_us_a_rating_so_we_know_if_you_like">Give us a rating so we know if you like</string>
    <string name="do_you_want_to_exit">Do you want to exit</string>
    <string name="ad_attribution">AD</string>
    <string name="install">Install</string>
    <string name="get_started">Get Started</string>
    <string name="languages">Languages</string>
    <string name="done">Done</string>
    <string name="this_action_may_contains_ad">This action may contains Ad</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="the_smart_solution_for_your_dish">The smart solution for your dish</string>
    <string name="the_feature_that_guides_you_to_your_destination">The feature that guides you to your destination.</string>
    <string name="never_lose_your_signal_again_use_satellite_maps_to_find_your_dish">Never lose your signal again. Use satellite maps to find your dish.</string>
    <string name="location_info">Location Info</string>
    <string name="rate_now">Rate now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remote2" translatable="false">Satellite_Finder_Counter</string>
    <string name="bubble_level">Bubble Level</string>
    <string name="get_the_perfect_level_with_ease">Get the Perfect Level with Ease</string>
    <string name="are_you_sure_you_want_to_exit_from_app">Are You Sure you want to exit from app?</string>
    <string name="my_location">My Location</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="go_premium">Get Premium Access</string>
    <string name="not_supported">Orientation not supported</string>
    <string name="calibrate_info">press MENU to calibrate...</string>
    <string name="lock_info">tap to lock level orientation</string>
    <string name="ar_view">AR View</string>
    <string name="protractor">Protractor</string>
    <string name="inclinometer">Inclinometer</string>
    <string name="pendulum_bob">Pendulum Bob</string>
    <string name="angle_meter">Angle Meter</string>
    <string name="iss_tracker">ISS Tracker</string>
    <string name="ruler_level">Ruler Level</string>


    <string name="subscription_join_our_premium">Join Our Premium</string>
    <string name="subscription_experience">Experience with 100% Ads-free</string>
    <string name="subscription_weekly_package">Weekly Package</string>
    <string name="subscription_monthly_package">Monthly Package</string>
    <string name="subscription_yearly_package">Yearly Package</string>
    <string name="subscription_continue">CONTINUE</string>
    <string name="subscription_cancel_anytime">Cancel Anytime</string>
    <string name="subscription_privacy_policy">Privacy Policy</string>
    <string name="subscription_description"> %1$s/%2$s. Cancel subscription anytime, 24 hrs before renewal - Auto Renewal</string>
    <string name="roll">Roll</string>
    <string name="pitch">Pitch</string>
    <string name="reset_device_sensor">Reset Device Sensor</string>


    <string name="satellite_list">Satellite List</string>
    <string name="weather_satellites">Weather Satellites</string>
    <string name="general_satellites">General Satellites</string>
    <string name="starlink_satellites">Starlink Satellites</string>
    <string name="try_now">Try Now</string>
    <string name="don_t_go">Don’t go!</string>
    <string name="experience_the_smart_solution_for_your_dish">Experience the Smart Solution for Your Dish!</string>
    <string name="exit_app">Exit App?</string>
    <string name="angle_meter_desc">Easy, precise angle measuring tool.</string>
    <string name="satellite_desc">Stay Connected, Track Anywhere!</string>
    <string name="iss_tracker_desc">Live International Space Station tracker</string>
    <string name="would_you_like_to_spend_some_more_time">Would you like to spend some more time?</string>
    <string name="no_satellite_found">No Satellite Found</string>

</resources>