<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_n"
    android:fitsSystemWindows="true"
    tools:context=".ui.activites.ExitActivity">

    <ImageView
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"

        android:src="@drawable/ic_cancel_round"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/exit_app"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/experience_the_smart_solution_for_your_dish"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:dotsColor="#909090"
        app:dotsCornerRadius="8dp"
        app:dotsSize="@dimen/_12sdp"
        app:dotsSpacing="@dimen/_3sdp"
        app:dotsWidthFactor="2.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager"
        app:progressMode="true"
        app:selectedDotColor="#4183F1" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/don_t_go"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dots_indicator" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/would_you_like_to_spend_some_more_time"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_leave"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="#33364E"
        android:fontFamily="@font/poppins"
        android:text="Leave"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_16ssp"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@+id/btn_stay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12"
        app:strokeColor="@color/white"
        app:strokeWidth="@dimen/_1sdp" />

    <TextView
        android:id="@+id/btn_stay"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/ic_satellite_tracker_bg"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="Stay"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_leave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_leave"
        app:layout_constraintTop_toTopOf="@+id/btn_leave" />


    <androidx.cardview.widget.CardView
        android:id="@+id/layout_native"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_3sdp"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/native_ad_layout_loader" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>