<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_n"
    tools:context=".ui.activites.InclinometerActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/heading" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:elevation="1dp"
        android:fontFamily="@font/roboto_medium"
        android:padding="@dimen/_10sdp"
        android:text="@string/inclinometer"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/layout_native"
        app:layout_constraintTop_toBottomOf="@id/heading">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvTopLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="#25273B"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp">

                    <com.example.satellitefinder.leveler.view.TwoDBubbleView
                        android:id="@+id/bubbleView2D"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tvMainAngle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="-12.2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bubbleView2D" />


                    <com.example.satellitefinder.leveler.view.SingleBubble
                        android:id="@+id/mainLevelView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvMainAngle" />


                    <TextView
                        android:id="@+id/tvRoll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/roll"
                        android:textColor="#01D89F"
                        android:textSize="@dimen/_15ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mainLevelView" />

                    <TextView
                        android:id="@+id/tvPitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/pitch"
                        android:textColor="#01D89F"
                        android:textSize="@dimen/_15ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tvRoll" />

                    <View
                        android:id="@+id/viewHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="#5E5E5E"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvRoll" />

                    <View
                        android:id="@+id/viewVertical"
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:background="#5E5E5E"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/viewHorizontal" />

                    <TextView
                        android:id="@+id/tvRollAngle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="-1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18ssp"
                        app:layout_constraintBottom_toTopOf="@+id/ifvRoll"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/ifvRoll" />

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/ifvRoll"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/viewVertical"
                        app:layout_constraintTop_toBottomOf="@id/viewHorizontal"
                        app:srcCompat="@drawable/ic_clinometer_roll" />

                    <TextView
                        android:id="@+id/tvPitchAngle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18ssp"
                        app:layout_constraintBottom_toBottomOf="@id/tvRollAngle"
                        app:layout_constraintStart_toEndOf="@id/viewVertical"
                        app:layout_constraintTop_toTopOf="@id/tvRollAngle" />

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/ifvPitch"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_clinometer_pitch" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnResetDeviceSensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/ic_satellite_tracker_bg"
                android:fontFamily="@font/poppins_semibold"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/reset_device_sensor"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvTopLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layout_native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/ad_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/native_ad_layout_loader_small" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>